# germanApp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  qwerty123  qwerty123.pub
app/: config.py  deps.py  main.py  models.py  schemas.py  security.py
app/routers/: auth.py  chat.py  flashcards.py  grammar.py  vocabulary.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.jsx  index.css  main.jsx
frontend/src/components/: Modal.jsx  ProtectedRoute.jsx  TagBadge.jsx
frontend/src/data/: importantVerbs.js  strongVerbs.js
frontend/src/pages/: ChatPage.jsx  FlashcardsPage.jsx  GrammarPage.jsx  LoginPage.jsx  RegisterPage.jsx  StrongVerbsPage.jsx  VocabularyPage.jsx
home/dimay/Work/python/germanApp/frontend/src/pages/: FlashcardsPage.jsx
