[project]
name = "german-app"
requires-python = ">=3.11"
version = "1.0.0"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sqlalchemy>=2.0.48",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
]
